@@ -51,15 +51,34 @@ $m->comp("/widgets/wrappers/table_top.mc",
    key => 'priority',
 &>
 
-<& '/widgets/select_object/select_object.mc',
-    object => 'category',
-    constrain => { site_id => $fa->get_site_id },
-    field => 'uri',
-    sort_field => 'uri',
-    name => 'category_id',
-    disp => 'Category',
-    selected => $fa->get_category_id
+<& /widgets/profile/text.mc,
+    disp  => 'Category',
+    name  => 'new_category_autocomplete',
+    id    => 'new_category_uri',
+    req   => 1,
+    value => $fa->get_category_path,
 &>
+<div id="category_autocomplete_choices" class="autocomplete"></div><span id="new_cat_warning" style="display: none"><img src="/media/images/dialog-warning.gif" alt="Warning" /> <% $lang->maketext(qq{Unable to add category that does not exist}) %></span>
+<script type="text/javascript">
+// add throbber after Primary Category text field
+var throbber = new Element('img', { id: 'category_autocomplete_indicator',
+                                    src: '/media/images/busy_indicator.gif' });
+Element.hide(throbber);
+$('new_category_uri').insert({ after: throbber });
+
+new Ajax.Autocompleter(
+    "new_category_uri",
+    "category_autocomplete_choices",
+    "/widgets/profile/autocomplete_categories.html",
+    {
+        onEmpty:    function() { Element.show('new_cat_warning'); },
+        onNotEmpty: function() { Element.hide('new_cat_warning') },
+        minChars:   2,
+        indicator: 'category_autocomplete_indicator',
+        parameters: 'site_id=<% $fa->get_site_id %>&key=template'
+    }
+);
+</script>
 
 <& '/widgets/profile/displayFormElement.mc',
    objref => $fa,
